--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@ant-design/icons": "^5.3.0",
     "antd": "^5.14.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
