--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "antd": "^5.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.20.0",
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/react": "^18.2.54",
     "@types/react-dom": "^18.2.18",
+    "@types/react-highlight-words": "^0.16.7",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
