--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.0",
+    "@tanstack/react-query": "^5.22.2",
     "antd": "^5.14.0",
     "axios": "^1.6.7",
-    "js-cookie": "^3.0.5",
     "emoji-picker-react": "^4.7.18",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
