--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
