--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.22.2",
     "antd": "^5.14.0",
     "axios": "^1.6.7",
+    "dayjs": "^1.11.10",
     "emoji-picker-react": "^4.7.18",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
