--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.10",
     "emoji-picker-react": "^4.7.18",
     "js-cookie": "^3.0.5",
+    "pnpm": "^9.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
