--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.0",
-    "@tanstack/react-query": "^5.22.2",
+    "@tanstack/query-async-storage-persister": "^5.36.0",
+    "@tanstack/react-query": "^5.36.0",
+    "@tanstack/react-query-persist-client": "^5.36.0",
     "antd": "^5.16.4",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
@@ -26,6 +28,7 @@
   "devDependencies": {
     "@iconify/react": "^4.1.1",
     "@rocketseat/eslint-config": "^2.1.0",
+    "@tanstack/react-query-devtools": "^5.35.1",
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.2.54",
     "@types/react-dom": "^18.2.18",
